fixed spacing problem with row class and flex

--- a/assets/sass/_filter.scss
+++ b/assets/sass/_filter.scss
@@ -72,19 +72,17 @@
   .price,
   .space {
     margin: 40px 0;
-    .row {
+    .inputs {
       display: flex;
-      flex-flow: row nowrap;
       justify-content: space-between;
+      margin-left: 0;
+      margin-right: 0;
       input {
-        display: inline-block;
         margin-top: 20px;
-        margin-left: 15px;
-        margin-right: 15px;
-        width: 100%;
         font-size: 1rem;
         padding: 5px;
         border: 0;
+        width: 48%;
         font-weight: 200;
         color: $white;
         background: $darkgrey;
