--- a/assets/sass/_listings.scss
+++ b/assets/sass/_listings.scss
@@ -63,6 +63,7 @@
           left: 20px;
           margin-right: 10px;
           border-radius: 0;
+          border: 0;
           appearance: none;
           background: $darkgrey;
           -webkit-appearance: none;
